--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -12,7 +12,7 @@
             <div class="mx-auto mt-5" style="max-width: 400px;">
                 <div class="card">
                     <div class="card-body">
-                        <h1 class="h3 mb-3 font-weight-normal text-center">Edit Produit</h1>
+                        <h1 class="h3 mb-3 font-weight-normal text-center">{{ 'produit.edit.title'|trans }}</h1>
 
                         {{ form_start(form) }}
                         <div class="form-group">
@@ -21,9 +21,9 @@
                         {{ form_end(form) }}
                     </div>
                     <div class="card-footer d-flex justify-content-between align-items-center">
-                        <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_index') }}'">Back to List</button>
+                        <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_index') }}'">{{ 'produit.edit.back'|trans }}</button>
                         <div>
-                            {{ include('produit/_delete_form.html.twig') }}
+                            <a href="{{ path('app_produit_delete', {'id': produit.id}) }}" class="btn btn-danger btn-sm">{{ 'produit.edit.delete'|trans }}</a>
                         </div>
                     </div>
                 </div>
