:children_crossing: [Feature] - Add translation product

--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -52,7 +52,7 @@
 
         <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_new') }}'">{{ 'porduit.index.btn.create'|trans }}</button>
 
-        <a href="{{ path('app_admin') }}" class="btn btn-primary">{{ 'porduit.index.btn.back_dashboard'|trans }}</a>
+        <a href="{{ path('app_admin') }}" class="btn btn-dark">{{ 'porduit.index.btn.back_dashboard'|trans }}</a>
 
     </div>
 {% endblock %}
