:children_crossing: [Feature] - Add translation product + type

--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des Paniers{% endblock %}
+{% block title %}{{ 'panier.index.title'|trans }}{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
