--- a/templates/panier/show.html.twig
+++ b/templates/panier/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Panier{% endblock %}
+{% block title %}{{ 'panier.show.page_title'|trans }}{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
