--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Produit{% endblock %}
+{% block title %}{{ 'produit.edit.page_title'|trans }}{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
