--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}{{ 'register.page_title'|trans }}{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -10,7 +10,7 @@
 {% block body %}
     <div class="container">
         <div class="mx-auto mt-5" style="max-width: 400px;">
-            <h1 class="h3 mb-3 font-weight-normal text-center">Register</h1>
+            <h1 class="h3 mb-3 font-weight-normal text-center">{{ 'register.title'|trans }}</h1>
 
             {{ form_errors(registrationForm) }}
 
