--- a/templates/panier/order.html.twig
+++ b/templates/panier/order.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Commande{% endblock %}
+{% block title %}{{ 'panier.order.page_title'|trans }}{% endblock %}
 
 {% block body %}
     <div class="container mt-5">
