--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des Produits{% endblock %}
+{% block title %}{{ 'produit.index.page_title'|trans }}{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -50,9 +50,9 @@
             </tbody>
         </table>
 
-        <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_new') }}'">{{ 'porduit.index.btn.create'|trans }}</button>
+        <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_new') }}'">{{ 'produit.index.btn.create'|trans }}</button>
 
-        <a href="{{ path('app_admin') }}" class="btn btn-dark">{{ 'porduit.index.btn.back_dashboard'|trans }}</a>
+        <a href="{{ path('app_admin') }}" class="btn btn-dark">{{ 'produit.index.btn.back_dashboard'|trans }}</a>
 
     </div>
 {% endblock %}
