[In Progress] Traduction fr/en]

--- a/templates/panier/order.html.twig
+++ b/templates/panier/order.html.twig
@@ -59,7 +59,7 @@
                 <div class="alert alert-info" role="alert">
                     {{ 'panier.order.empty_command'|trans }}
                 </div>
-                <a href="{{ path('app_accueil') }}" class="btn btn-primary">Commencer vos achats</a>
+                <a href="{{ path('app_accueil') }}" class="btn btn-dark">Commencer vos achats</a>
             </div>
         {% endif %}
     </div>
