--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -23,7 +23,7 @@
                     <div class="card-footer d-flex justify-content-between align-items-center">
                         <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_index') }}'">{{ 'produit.edit.back'|trans }}</button>
                         <div>
-                            <a href="{{ path('app_produit_delete', {'id': produit.id}) }}" class="btn btn-danger btn-sm">{{ 'produit.edit.delete'|trans }}</a>
+                            <a href="{{ path('app_produit_delete', {'id': produit.id}) }}" class="btn btn-dark btn-sm">{{ 'produit.edit.delete'|trans }}</a>
                         </div>
                     </div>
                 </div>
