--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -26,7 +26,7 @@
                 {{ form_row(form.Prenom, {'attr': {'class': 'form-control', 'placeholder': 'Prénom'}}) }}
             </div>
 
-            <button type="submit" class="btn btn-lg btn-primary btn-block mt-3">Mettre à jour</button>
+            <button type="submit" class="btn btn-lg btn-dark btn-block mt-3">Mettre à jour</button>
 
             {{ form_end(form) }}
         </div>
