--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}PearPhone{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link href="/public/accueil.css" rel="stylesheet">
@@ -25,7 +25,7 @@
                     <ul class="navbar-nav mr-auto ">
                         {% if app.user %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_panier_show') }}">Mon panier</a>
+                                <a class="nav-link" href="{{ path('app_panier_show') }}">{{ 'base.nav.panier'|trans }}</a>
                             </li>
                         {% endif %}
                     </ul>
@@ -37,7 +37,7 @@
                                 </a>
                             {% else %}
                                 <a class="nav-link" href="{{ path('app_login') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Connexion / Inscription
+                                    {{ 'base.nav.login_register'|trans }}
                                 </a>
                             {% endif %}
                         </li>
