--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Editer un utilisateur{% endblock %}
+{% block title %}{{ 'user.edit.page_title'|trans }}{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -10,23 +10,23 @@
 {% block body %}
     <div class="container mt-5">
         <div class="mx-auto" style="max-width: 400px;">
-            <h1 class="h3 mb-3 font-weight-normal text-center">Editer un utilisateur</h1>
+            <h1 class="h3 mb-3 font-weight-normal text-center">{{ 'user.edit.title'|trans }}</h1>
 
             {{ form_start(form) }}
 
             <div class="form-group">
-                {{ form_row(form.email, {'attr': {'class': 'form-control', 'placeholder': 'Email'}}) }}
+                {{ form_row(form.email, {'attr': {'class': 'form-control', 'placeholder': 'user.form.email_placeholder'|trans}}) }}
             </div>
 
             <div class="form-group">
-                {{ form_row(form.Nom, {'attr': {'class': 'form-control', 'placeholder': 'Nom'}}) }}
+                {{ form_row(form.Nom, {'attr': {'class': 'form-control', 'placeholder': 'user.form.nom_placeholder'|trans}}) }}
             </div>
 
             <div class="form-group">
-                {{ form_row(form.Prenom, {'attr': {'class': 'form-control', 'placeholder': 'Prénom'}}) }}
+                {{ form_row(form.Prenom, {'attr': {'class': 'form-control', 'placeholder': 'user.form.prenom_placeholder'|trans}}) }}
             </div>
 
-            <button type="submit" class="btn btn-lg btn-primary btn-block mt-3">Mettre à jour</button>
+            <button type="submit" class="btn btn-lg btn-primary btn-block mt-3">{{ 'user.edit.btn'|trans }}</button>
 
             {{ form_end(form) }}
         </div>
