:bug: [Fix] - Fix "€" show product

--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -25,7 +25,7 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">{{ 'produit.show.table.prix'|trans }}</th>
-                                    <td>{{ produit.Prix }}</td>
+                                    <td>{{ produit.Prix }}€</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">{{ 'produit.show.table.stock'|trans }}</th>
